--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <header class="header">
       <div class="header-nav">
-        <img src="./images/logo.svg" alt="huddle logo" class="logo-header" />
+        <img src="images/logo.svg" alt="huddle logo" class="logo-header" />
         <button type="button" class="button-header">Try It Free</button>
       </div>
       <div class="container-header">
@@ -41,7 +41,7 @@
         </div>
         <div class="img-main">
           <img
-            src="./images/illustration-mockups.svg"
+            src="images/illustration-mockups.svg"
             alt="mocukup example "
             class="mockup-img"
           />
@@ -62,7 +62,7 @@
             </div>
 
             <img
-              src="./images/illustration-grow-together.svg"
+              src="images/illustration-grow-together.svg"
               alt=""
               class="card-img"
             />
@@ -70,7 +70,7 @@
 
           <div class="card-conversations">
             <img
-              src="./images/illustration-flowing-conversation.svg"
+              src="images/illustration-flowing-conversation.svg"
               alt=""
               class="card-flowing"
             />
@@ -94,7 +94,7 @@
             </div>
 
             <img
-              src="./images/illustration-your-users.svg"
+              src="images/illustration-your-users.svg"
               alt=""
               class="card-img"
             />
@@ -116,10 +116,10 @@
     <footer class="footer">
       <div class="footer-container">
         <div class="footer-main-content">
-          <img src="./images/logo.svg" alt="huddle logo" class="logo-footer" />
+          <img src="images/logo.svg" alt="huddle logo" class="logo-footer" />
           <div class="localization">
             <img
-              src="./images/icon-location.svg"
+              src="images/icon-location.svg"
               alt="localization"
               class="icon-footer"
             />
@@ -130,7 +130,7 @@
           </div>
           <div class="phone-number">
             <img
-              src="./images/icon-phone.svg"
+              src="images/icon-phone.svg"
               alt="phone calling"
               class="icon-footer"
             />
@@ -138,7 +138,7 @@
           </div>
           <div class="email-footer">
             <img
-              src="./images/icon-email.svg"
+              src="images/icon-email.svg"
               alt="email box"
               class="icon-footer"
             />
